--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Web Page</title>
+    <title>Halloween Game</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     
